<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context="com.app.softdrive.calculadoradepeso.detallesActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/indice_de_masa_corporal"
        android:textSize="25sp"
        android:gravity="center"
        android:id="@+id/imct"
        android:textColor="@android:color/white"/>

    <ProgressBar
        android:layout_width="match_parent"
        android:max="43"
        android:layout_marginTop="7sp"
        android:progress="18"
        android:id="@+id/progresso"
        android:layout_marginRight="10sp"
        android:progressDrawable="@drawable/progresso"
        android:layout_marginLeft="10sp"
        android:layout_below="@id/imct"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
        android:layout_height="wrap_content" />




    <ProgressBar
        android:layout_width="55sp"
        android:max="6"
        android:layout_below="@id/imct"
        android:id="@+id/normall"
        android:progress="6"
        android:layout_centerHorizontal="true"
        android:progressDrawable="@drawable/progress_normal"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:max="19"
        android:id="@+id/delgado"
        android:progress="19"
        android:layout_marginLeft="10sp"
        android:layout_below="@id/imct"
        android:layout_toLeftOf="@id/normall"
        android:layout_alignParentLeft="true"
        android:progressDrawable="@drawable/progress_delgado"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
        android:layout_height="wrap_content" />


    <ProgressBar
        android:layout_width="wrap_content"
        android:max="15"
        android:layout_alignParentRight="true"
        android:progress="15"
        android:layout_marginRight="10sp"
        android:progressDrawable="@drawable/progress_sobrepeso"
        android:layout_toRightOf="@id/normall"
        android:layout_below="@id/imct"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
        android:layout_height="wrap_content" />



    <TextView
        android:layout_below="@+id/imct"
        android:id="@+id/imc"
        android:text="@string/_18_8"
        android:layout_marginTop="30sp"
        android:textSize="30sp"
        android:layout_marginLeft="40sp"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/de_18_5_a_24_9"
        android:textSize="15sp"
        android:id="@+id/standar"
        android:layout_below="@+id/imc"
        android:layout_marginLeft="30sp"
        android:textColor="@android:color/white"

        />

    <TextView
        android:layout_marginTop="5sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normal"
        android:textSize="25sp"
        android:id="@+id/stado"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/standar"
        android:textColor="@android:color/white"

        />

    <TextView
        android:layout_marginTop="5sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:text="@string/enhorabuena_tiene_usted_un_nivel_normal"
        android:textSize="15sp"
        android:id="@+id/stadod"
        android:layout_below="@+id/stado"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"

        />

    <View
        android:id="@+id/div"
        android:layout_marginTop="10sp"
        android:layout_width="match_parent"
        android:layout_below="@id/stadod"
        android:layout_height="1dp"
        android:background="@android:color/white"/>

    <TextView
        android:layout_below="@id/div"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/peso_ideal"
        android:textSize="25sp"
        android:gravity="center"
        android:id="@+id/pit"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_marginTop="30sp"
        android:layout_below="@+id/pit"
        android:id="@+id/pnt"
        android:text="Tu peso"
        android:textSize="20sp"
        android:layout_marginLeft="20sp"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="30sp"
        android:layout_below="@+id/pnt"
        android:id="@+id/pn"
        android:text="@string/_71_7_79_3"
        android:textSize="20sp"
        android:layout_marginLeft="25sp"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



    <TextView
        android:layout_marginTop="30sp"
        android:layout_below="@+id/pit"
        android:id="@+id/pitx"
        android:text="Peso ideal"
        android:layout_alignParentRight="true"
        android:textSize="20sp"
        android:layout_marginRight="20sp"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="30sp"
        android:layout_below="@+id/pitx"
        android:id="@+id/pi"
        android:text="@string/_71_7_79"
        android:layout_alignParentRight="true"
        android:textSize="20sp"
        android:layout_marginRight="35sp"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="10sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/de_185_a_24_9"
        android:textSize="15sp"
        android:id="@+id/dife"
        android:layout_below="@+id/pi"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"

        />






</RelativeLayout>
</ScrollView>